--- a/src/scss/components/_result.scss
+++ b/src/scss/components/_result.scss
@@ -20,7 +20,7 @@
 .profile{
     margin-top: 2rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
 
     &__photo{
         width: 100px;
@@ -61,6 +61,10 @@
         margin-bottom: 0;
     }
 
+    &__list {
+        max-height: 300px;
+        overflow: hidden;
+    }
 }
 
 .repo {
@@ -69,7 +73,9 @@
     width: 100%;
     padding: .7rem 0;
 
-    border-bottom: 1px solid rgba($color-black, 0.6);
+    &:not(:last-child){
+        border-bottom: 1px solid $color-primary-faded;
+    }
 
     &__title {
         margin: 0;
@@ -77,16 +83,23 @@
     }
     &__numbers {
         width: 50%;
+
         display: flex;
         align-items: center;
+
         justify-content: flex-end;
     }
 
     &__stars {
+        display: flex;
+        align-items: center;
+        margin: 0 .3rem;
 
     }
     &__fork {
-        
+        display: flex;
+        align-items: center;
+        margin: 0 .3rem;
     }
 }
 
