little clean up, ready for refactoring

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -10,3 +10,8 @@
 @mixin button-padding {
     padding: 6px 12px;
 }
+
+@mixin flex-vertical-center {
+    display: flex;
+    align-items: center;
+}
