--- a/src/scss/themes/_main-theme.scss
+++ b/src/scss/themes/_main-theme.scss
@@ -1,3 +1,14 @@
 body {
     background-color: $background-color;
 }
+
+input[type=text] {
+    background-color: $color-white;
+    color: $color-primary;
+    
+}
+
+input[type=text]:focus,
+input[type=text]:active {
+    background-color: $color-white;
+}
